--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
             <version>${mysql.connector.version}</version>
         </dependency>
 
-        <!-- 公共基础类 -->
+        <!-- 公共基础工具类 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
