登录接口 + Redis工具类

--- a/myBlog-common/pom.xml
+++ b/myBlog-common/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>commons-collections</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
