--- a/myBlog-api/pom.xml
+++ b/myBlog-api/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- md5加密 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+
 
     </dependencies>
 </project>
