--- a/myBlog-web/src/main/resources/application-dev.yml
+++ b/myBlog-web/src/main/resources/application-dev.yml
@@ -11,6 +11,15 @@ spring:
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
+  #redis
+  redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: localhost
+    port: 6379
+    connect-timeout: 5000
+
 
 #mybatis
 mybatis:
