--- a/myBlog-framework/pom.xml
+++ b/myBlog-framework/pom.xml
@@ -19,6 +19,14 @@
             <artifactId>myBlog-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- 接口 -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>myBlog-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- aspect -->
         <dependency>
             <groupId>org.aspectj</groupId>
