七牛云文件上传接口（未测试）

--- a/myBlog-common/pom.xml
+++ b/myBlog-common/pom.xml
@@ -55,9 +55,17 @@
             <artifactId>commons-collections</artifactId>
         </dependency>
 
+        <!-- jwt -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
+        </dependency>
+
+
+        <!-- 七牛云 -->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
         </dependency>
 
     </dependencies>
