--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <aspect.version>1.9.6</aspect.version>
         <jjwt.vesion>0.9.1</jjwt.vesion>
         <commons-codec.version>1.15</commons-codec.version>
+        <qiniu.version>7.7.0</qiniu.version>
     </properties>
 
 
@@ -153,6 +154,12 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>${qiniu.version}</version>
         </dependency>
 
     </dependencies>
