--- a/myBlog-common/pom.xml
+++ b/myBlog-common/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>qiniu-java-sdk</artifactId>
         </dependency>
 
+        <!-- druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
