--- a/myBlog-web/src/main/resources/application-dev.yml
+++ b/myBlog-web/src/main/resources/application-dev.yml
@@ -11,6 +11,33 @@ spring:
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
+    druid:
+      # 初始化大小，最小，最大
+      initial-size: 2
+      min-idle: 2
+      max-active: 10
+      # 配置获取连接等待超时的时间
+      max-wait: 60000
+      test-while-idle: true
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      time-between-eviction-runs-millis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      min-evictable-idle-time-millis: 30000
+      validation-query: select 'x'
+      test-on-borrow: false
+      test-on-return: false
+      #exception-sorter: true
+      pool-prepared-statements: true
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+      filters: stat,wall,slf4j
+      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+      use-global-data-source-stat: true
+      stat-view-servlet:
+        login-username: myblog
+        login-password: myblog123456
+        url-pattern: /druid/*
+        enabled: true
   #redis
   redis:
     # Redis数据库索引（默认为0）
